// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleSection renders ScheduleSection component when firstday slots  missed is 0 1`] = `
<div>
  <div>
    <div
      class="schedule-section"
    >
      <div
        class="titleText"
      >
        <span>
          Schedule(s) (24 hrs format) 
        </span>
        <span
          class="required"
        >
          *
        </span>
      </div>
      <div
        class="inline-field"
        id="schedule"
      >
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="09:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="13:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="17:00"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScheduleSection renders ScheduleSection component when firstday slots are missed 1`] = `
<div>
  <div>
    <div
      class="schedule-section"
    >
      <div
        class="titleText"
      >
        <span>
          Schedule time (start date, 24 hrs format) 
        </span>
        <span
          class="required"
        >
          *
        </span>
      </div>
      <div
        class="inline-field"
        id="schedule"
      >
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="08:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="12:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="16:00"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="schedule-section"
    >
      <div
        class="titleText"
      >
        <span>
          Schedule time (subsequent, 24 hrs format) 
        </span>
        <span
          class="required"
        >
          *
        </span>
      </div>
      <div
        class="inline-field"
        id="schedule"
      >
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="09:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="13:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="17:00"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="schedule-section"
    >
      <div
        class="titleText"
      >
        <span>
          Schedule time (remainder, 24 hrs format) 
        </span>
        <span
          class="required"
        >
          *
        </span>
      </div>
      <div
        class="inline-field"
        id="schedule"
      >
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="10:00"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="schedule-time"
        >
          <div
            class="bx--form-item"
          >
            <label
              class="bx--label"
              for="time-selector"
            >
              <div
                class="titleText"
              >
                <span>
                    
                </span>
              </div>
            </label>
            <div
              class="bx--time-picker"
            >
              <div
                class="bx--time-picker__input"
              >
                <input
                  autocomplete="off"
                  class="bx--time-picker__input-field bx--text-input"
                  id="time-selector"
                  maxlength="5"
                  pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                  placeholder="hh:mm"
                  style="width: 70%; padding: 0px 0px 0px 1rem;"
                  type="text"
                  value="14:00"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
